--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.12.0"
+    "mongodb": "^6.12.0",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
